# pedestrian_detect

./: .gitignore  CMakeLists.txt  README.md  diagram.puml  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
components/: common.hpp  new_file.cpp
components/app_camera/: CMakeLists.txt
components/app_camera/include/: app_camera.hpp
components/app_camera/src/: app_camera.cpp
components/app_detect/: CMakeLists.txt
components/app_detect/include/: app_detect.hpp
components/app_detect/src/: app_detect.cpp
components/app_http_server/: CMakeLists.txt
components/app_http_server/include/: http_server.hpp  rgb888_to_bmp.hpp
components/app_http_server/src/: http_server.cpp  rgb888_to_bmp.cpp
components/app_lcd/: CMakeLists.txt
components/app_lcd/include/: app_lcd.hpp  image_utils.hpp
components/app_lcd/src/: app_lcd.cpp  image_utils.cpp
components/app_wifi/: CMakeLists.txt
components/app_wifi/include/: app_wifi.hpp
components/app_wifi/src/: app_wifi.cpp
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
